// SPDX-License-Identifier: GPL-3.0-or-later
// Copyright (C) 2024-2026 Open Android Auto contributors
// Based on works by: f1x.studio (aasdk), opencardev (crankshaft), aa-proxy (aa-proxy-rs)
syntax="proto2";

package oaa.proto.messages;

message ChannelOpenRequest
{
    optional sint32 priority = 1;   // APK: sint32 (zigzag encoded), not int32
    optional int32 channel_id = 2;
}
