// Android Auto Protocol Buffer Definitions
// https://github.com/mrmees/open-android-auto
// SPDX-License-Identifier: GPL-3.0-or-later

/*
 * WifiVersionResponse — BT WiFi version negotiation response.
 *
 * APK class: wdw.java (AA v16.1)
 * BT RFCOMM message type: ordinal 4 (MESSAGE_WIFI_VERSION_RESPONSE_BT)
 * Dispatched by ngh.java line 541.
 * Logged at ngh.java lines 593-603 with field names:
 *   majorVersion, minorVersion, deviceSerial, versionStatus, selectedWifiChannelType
 *
 * Sent by phone in response to WifiVersionRequest.
 */

syntax="proto2";

import "oaa/common/SessionInfoData.proto";
import "oaa/wifi/WifiChannelTypeEnum.proto";

package oaa.proto.messages;

message WifiVersionResponse {
    optional int32 major_version = 1;              // APK: b (int)
    optional int32 minor_version = 2;              // APK: c (int)
    optional string device_serial = 3;             // APK: e (String)
    optional int32 version_status = 4;             // APK: f (enum via wck.p/viz.au — WifiVersionStatus)
    optional enums.WifiChannelType.Enum selected_wifi_channel_type = 5; // APK: g (enum via wck.r/a.bw)
    optional data.SessionInfo session_info = 6;    // APK: h (vvf)
    optional bytes extra_data = 7;                 // APK: i (zxq/ByteString)
}
